# novastory

./: .appveyor.yml  .gitignore  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  astylize.bat  config.h  dashboard  fedoralive  fedorawinbuild  getrevision  pre-commit  version.h.in
.circleci/: config.yml
cmake/: qtx.cmake  testing.cmake
dump/: dump.bat  novastory.sql
public/: editor-panel.html  editor.html  header-logined.html  header.html  index-page.html  index-page2.html  index.html  login.html  modal-chat.html  modal-log.html  modal-login.html  modal-register.html  modal-restore.html  modal-settings.html  profile.html  register.html  robots.txt  rp-projects.html  template-logined.html  template.html
public/css/: editor.css  login.css  modal.css  novastory.css  novastory2.css  profile.css  rpanel.css  tree.css
public/js/: common.js  novastory.api.js  novastory.js
public/novastory/: header-logined.html  header.html  index.html  login.html  modal-login.html  modal-register.html  modal-restore.html  register.html  restore.html
public/novastory/css/: editor.css  login.css  novastory.css
server/: CMakeLists.txt  apihandler.cpp  apihandler.h  avatarshandler.cpp  avatarshandler.h  config.h  indexhandler.cpp  indexhandler.h  jsonthrower.h  main.cpp  novastoryerrorhandler.cpp  novastoryerrorhandler.h  novastoryserver.cpp  novastoryserver.h  profile.cpp  profilehandler.cpp  profilehandler.h  rawfilehandler.cpp  rawfilehandler.h  recaptcha.cpp  registrationhandler.cpp  registrationhandler.h  userspicshandler.cpp  userspicshandler.h  webdatacontainer.cpp
server/3dparty/smtp/: CMakeLists.txt  mimefile.cpp  mimemessage.h  mimemultipart.cpp  quotedprintable.h  smtpclient.h
server/database/: novastory_db.h
server/logic/: bookinfo.cpp  bookinfo.h  captcha.cpp  captcha.h  loggedactions.cpp  loggedactions.h  texteditor.cpp  texteditor.h  textrevision.cpp  textrevision.h  textrevisioncontainer.cpp  textrevisioncontainer.h  user.cpp  user.h  webdata.cpp  webdata.h
server/resources/: qtconf.qrc
server/sql/: dbpatcher.cpp  dbpatcher.h  nestedset.cpp  sqldatabase.cpp  sqlizable.cpp  sqlizable.h
server/utils/: bytecache.hpp  globals.h
server/webserver/: CMakeLists.txt  backup.cpp  bytecache.hpp  cron.cpp  cron.h  datahandler.h  globals.cpp  globals.h  logger.cpp  lrucache.hpp  smtpsender.cpp  smtpsender.h  templator.cpp  templator.h  translatorhelper.cpp  translatorhelper.h  webdatacontainer.cpp  webprocess.cpp  webprocess.h  webrequest.cpp  webrequest.h  webrouter.cpp  webrouter.h  webserver.cpp  webserver.h  webserver_config.h  websocketslistener.cpp  websocketslistener.h
server/webserver/3dparty/smtp/: mimecontentformatter.h  mimehtml.cpp  mimeinlinefile.cpp  smtpclient.cpp  smtpclient.h
server/webserver/3dparty/zlib/: inftrees.h  zconf.h  zutil.h
server/webserver/routers/: errorhandler.cpp  errorhandler.h  rawfilehandler.cpp  rawfilehandler.h
server/webserver/sql/: dbpatcher.cpp  sqldatabase.cpp  sqlizable.cpp  sqlizable.h  sqlquery.cpp
server/webserver/tests/: CMakeLists.txt  test-Cron.cpp  test-Git.cpp  test-Globals.cpp  test-LRUCache.cpp  test-Logger.cpp  test-NestedSet.cpp  test-RawFileHandler.cpp  test-WebDataContainer.cpp
src/: CMakeLists.txt  apihandler.cpp  apihandler.h  avatarshandler.cpp  avatarshandler.h  config.h  datahandler.h  dataimage.cpp  dataimage.h  htmlhandler.h  htmltemplate.h  indexhandler.cpp  indexhandler.h  jsonerrorthrower.cpp  jsonerrorthrower.h  jsonthrower.cpp  jsonthrower.h  logger.cpp  logger.h  main.cpp  profile.cpp  profile.h  profilehandler.cpp  profilehandler.h  rawfilehandler.cpp  rawfilehandler.h  recaptcha.cpp  recaptcha.h  registrationhandler.cpp  registrationhandler.h  userspicshandler.cpp  utils.h  webdatacontainer.cpp  webdatacontainer.h  webrequest.cpp  webrequest.h  webrouter.cpp  webrouter.h  webserver.cpp  webserver.h
src/3dparty/smtp/: CMakeLists.txt  emailaddress.cpp  emailaddress.h  mimeattachment.cpp  mimeattachment.h  mimefile.cpp  mimefile.h  mimehtml.h  mimeinlinefile.h  mimemessage.cpp  mimemessage.h  mimemultipart.h  mimepart.cpp  mimepart.h  mimetext.h  quotedprintable.cpp  smtpclient.cpp  smtpclient.h
src/database/: novastory_db.h
src/logic/: avatar.cpp  avatar.h  captcha.cpp  captcha.h  texteditor.cpp  texteditor.h  textrevision.cpp  textrevision.h  textrevisioncontainer.cpp  textrevisioncontainer.h  user.cpp  user.h  userpic.cpp  userpic.h  users.cpp  users.h  webdata.cpp
src/sql/: dbpatcher.cpp  dbpatcher.h  nestedset.cpp  nestedset.h  sqldatabase.cpp  sqldatabase.h  sqlizable.cpp  sqlizable.h  sqlquery.cpp  sqlquery.h
src/utils/: bytecache.hpp  globals.cpp  globals.h  lrucache.hpp  nestedset.cpp  nestedset.h
src/webserver/: templator.cpp  templator.h  webprocess.cpp  webprocess.h  webrequest.cpp  webrequest.h  webrouter.cpp  webrouter.h  webserver.cpp  webserver.h
tests/: CMakeLists.txt  test-Avatars.cpp  test-BookInfo.cpp  test-Cron.cpp  test-DBPatcher.cpp  test-DataImage.cpp  test-DbPatcher.cpp  test-Git.cpp  test-Globals.cpp  test-JsonThrower.cpp  test-LRUCache.cpp  test-Logger.cpp  test-LogicUsers.cpp  test-MultiThreadWeb.cpp  test-NestedSet.cpp  test-QMySqlSimple.cpp  test-RawFileHandler.cpp  test-Recaptcha.cpp  test-TextEditor.cpp  test-TextRevision.cpp  test-WebDataContainer.cpp
toolkit/: CMakeLists.txt  downloader.cpp  downloader.h  main.cpp
webserver/: CMakeLists.txt  backup.h  cron.h  datahandler.h  jsonthrower.h  logger.h  smtpsender.h  templator.cpp  templator.h  webprocess.cpp  webprocess.h  webrequest.cpp  webrouter.h  webserver.cpp  webserver.h  webserver_config.h  websocketslistener.cpp  websocketslistener.h
webserver/3dparty/smtp/: CMakeLists.txt  mimecontentformatter.cpp  mimefile.h  mimemessage.cpp  mimetext.cpp  quotedprintable.cpp
webserver/3dparty/zlib/: CMakeLists.txt  deflate.h  gzguts.h  zlib.h
webserver/sql/: dbpatcher.cpp  nestedset.cpp  nestedset.h  sqlizable.cpp  sqlizable.h
